syntax = "proto3";

package apichat;
option go_package = "apichat/api/chat/v1;v1";

import "google/api/annotations.proto";
import "api/apichat/api/chat/v1/contants.proto";
import "api/apichat/api/chat/v1/error_reason.proto";

// 聊天服务
service Chat {
  // 发消息
  rpc SendMsg(SendMsgRequest) returns(SendMsgReply){
    option (google.api.http) = {
      post: "/chat/msg/send"
      body: "*"
    };
  }

  // timeline 同步消息（适合有本地存储能力的客户端，如APP）
  rpc GetSyncMessage (SyncMessageRequest) returns (SyncMessageReply){
    option (google.api.http) = {
      get: "/chat/msg/sync"
    };
  }

  // 查询会话列表
  rpc GetRecentContactSession(GetRecentSessionRequest) returns(GetRecentSessionReply){
    option (google.api.http) = {
      get: "/chat/session/list"
    };
  }

  // 查询历史消息列表
  rpc GetMsgList(GetMsgListRequest) returns(GetMsgListReply){
    option (google.api.http) = {
      get: "/chat/msg/list"
    };
  }

  // 已读消息回执
  rpc MsgReadAck(MsgReadAckRequest) returns(MsgReadAckReply){
    option (google.api.http) = {
      post: "/chat/msg/read"
      body: "*"
    };
  }
}

// 消息已读回复请求（我方）
message MsgReadAckRequest{
  uint64 user_id = 1; // 消息发送方
  uint64 session_id = 2;
  uint64 msg_id = 3; // 服务器消息ID，在该ID之前的所有消息被标记为已读
  CIMSessionType session_type = 4;
}

// 消息已读回复响应
message MsgReadAckReply{}

// 最近聊天会话列表请求
message GetRecentSessionRequest {
  uint64 user_id = 1;
  uint32 latest_update_time = 2; // 最后更新时间
}

// 会话信息
message CIMContactSessionInfo {
  uint64 session_id = 1;                   // 会话id
  CIMSessionType session_type = 2;         // 会话类型
  CIMSessionStatusType session_status = 3; // 会话修改命令，预留
  uint32 unread_cnt = 4;                   // 该会话未读消息数量
  uint32 updated_time = 5;                 // 更新时间
  string msg_id = 6;                       // 最新一条消息的id（UUID）
  uint64 server_msg_id = 7; // 最新一条消息服务端的id（顺序递增）
  uint32 msg_time_stamp = 8;    // 最新一条消息时间戳（毫秒）
  bytes msg_data = 9;           // 最新一条消息的内容
  CIMMsgType msg_type = 10;     // 最新一条消息的类型
  uint64 msg_from_user_id = 11; // 最新一条消息的发送者
  CIMMsgStatus msg_status = 12; // 最新一条消息的状态（预留）
  /*optional*/
  string msg_attach = 13; // 最新一条消息的附件（预留）
  /*optional*/
  string extend_data = 14; // 本地扩展字段（限制4096）
  /*optional*/
  bool is_robot_session = 15; // 是否为机器人会话
}

message GetRecentSessionReply {
  uint64 user_id = 1;
  uint32 unread_counts = 2; // 总未读数量
  repeated CIMContactSessionInfo contact_session_list = 3; // 会话列表
}

// 历史离线聊天消息请求
message GetMsgListRequest {
  uint64 user_id = 1;
  CIMSessionType session_type = 2;
  uint64 session_id = 3;
  //   uint64 from_time_stamp = 4; // 起始时间点，单位：毫秒
  //   uint64 end_time_stamp = 5;  // 结束时间点，单位：毫秒
  uint64 end_msg_id = 4; // 结束服务器消息id(不包含在查询结果中)
  uint32 limit_count = 6; // 本次查询消息的条数上线(最多100条)
  // repeated CIM.Def.CIMMessageType msg_type_list = 7; // 查询指定的消息类型
  // optional bool is_exclusion_type_ = 8; // 是否排除指定的消息类型
}

// 消息信息
message IMMsgInfo {
  string client_msg_id = 1; // 客户端消息ID（UUID）
  uint64 server_msg_id = 2; // 服务端消息ID

  CIMResCode msg_res_code = 3;     // 消息错误码
  CIMMsgFeature msg_feature = 4;   // 消息属性
  CIMSessionType session_type = 5; // 会话类型
  uint64 from_user_id = 6;         // 来源会话ID
  uint64 to_session_id = 7;        // 目标会话ID
  uint32 create_time = 8;          // 消息创建时间戳（毫秒）

  CIMMsgType msg_type = 9;      // 消息类型
  CIMMsgStatus msg_status = 10; // 消息状态（预留）
  bytes msg_data = 11;          // 消息内容
  /*optional*/
  string attach = 12;                    // 消息附件（预留）
  CIMClientType sender_client_type = 13; // 发送者客户端类型
}

//对于群而言，如果消息数目返回的数值小于请求的cnt,则表示群的消息能拉取的到头了，更早的消息没有权限拉取。
//如果limit_count 和 msg_list.count 不一致，说明服务器消息有缺失，需要
//客户端做一个缺失标记，避免下次再次拉取。
message GetMsgListReply {
  uint64 user_id = 1;
  CIMSessionType session_type = 2;
  uint64 session_id = 3;
  uint64 end_msg_id = 4; // 结束服务器消息id(不包含在查询结果中)
  //   uint64 from_time_stamp = 4;     // 起始时间点，单位：毫秒
  //   uint64 end_time_stamp = 5;      // 结束时间点，单位：毫秒
  repeated IMMsgInfo msg_list = 6; // 消息列表
}

message IMMessage{
  uint64 from = 1;            // 消息发送方
  string to = 2;              // 消息接受方，单聊用户ID，群聊群ID
  string client_msg_id = 4;   // 客户端消息ID，唯一（UUID）
  uint64 server_msg_seq = 5;   // 服务端生成的消息ID，顺序（客户端发送时无需设置）
  int32 create_time = 6;      // 消息创建时间戳(秒)
  CIMMsgType msg_type = 7;    // 消息类型
  bytes msg_data = 9;         // 消息内容
}

// 发送消息请求
message SendMsgRequest {
  uint64 from_user_id = 1;    // 消息发送方
  string from_nick_name = 2;  // 消息发送方昵称
  uint64 to_session_id = 3;   // 消息接受方，单聊用户ID，群聊群ID
  string client_msg_id = 4;   // 客户端消息ID，唯一（UUID）
  uint64 server_msg_seq = 5;  // 服务端生成的消息序号，顺序（客户端发送时无需设置）
  int32 create_time = 6;      // 消息创建时间戳(秒)
  CIMMsgType msg_type = 7;    // 消息类型
  bytes msg_data = 9;         // 消息内容
}

// 发送消息响应
message SendMsgReply {
  uint64 server_msg_seq = 1; // 服务端生成的消息ID，顺序
  CIMResCode res_code = 2;   // 错误码
}

// 同步消息请求
message SyncMessageRequest{
  string member = 1;
  int64 last_read = 2;
  int32 count = 3;
}

message TimelineEntry {
  int64 sequence = 1;
  repeated IMMessage message = 2;
}

// 同步消息响应
message SyncMessageReply{
  // 最新的消息序号
  int64 latest_seq = 1;
  // entry_set 中最后的序号值
  int64 entry_set_last_seq = 2;
  // 如果拉取到的结果为空，说明同步完成
  repeated TimelineEntry entry_set = 3;
}